# switchy_api/swagger_output.json
@@ -135,10 +135,10 @@
         }
       }
     },
-    "/User/GetById": {
+    "/User/Info": {
       "get": {
         "tags": [
-          "GetById"
+          "User"
         ],
         "description": "",
         "responses": {
@@ -147,6 +147,9 @@
           },
           "400": {
             "description": "Bad Request."
+          },
+          "404": {
+            "description": "Not Found."
           },
           "500": {
             "description": "Internal Server Error."
